--- a/RozkladNpuAspNetCore/Properties/localizations/ua.json
+++ b/RozkladNpuAspNetCore/Properties/localizations/ua.json
@@ -9,14 +9,24 @@
       "choose-faculty-message":"Вибери факультет:",
       "no-groups-for-faculty-message":"На жаль, для цього факультету груп не має :(",
       "add-group":"Додати групу",
-      "monday":"Пн",
-      "tuesday":"Вт",
-      "wednesday":"Ср",
-      "thursday":"Чт",
-      "friday":"Пт",
+      "monday":"Понеділок",
+      "tuesday":"Вівторок",
+      "wednesday":"Середа",
+      "thursday":"Четвер",
+      "friday":"П'ятниця",
+      "saturday":"Субота",
+      "sunday":"Неділя",
+      "monday-short":"Пн",
+      "tuesday-short":"Вт",
+      "wednesday-short":"Ср",
+      "thursday-short":"Чт",
+      "friday-short":"Пт",
       "this-week":"Цей тиждень",
       "next-week":"Наступний тиждень",
       "back":"Назад",
-      "delete":"Видалити"
+      "delete":"Видалити",
+      "classes-on":"Пари на",
+      "updated-on":"Оновлено",
+      "group":"група"
    }
 }
