Add menu-notification to localization

--- a/RozkladNpuBot.WebApi/Properties/localizations/ua.json
+++ b/RozkladNpuBot.WebApi/Properties/localizations/ua.json
@@ -27,6 +27,7 @@
       "delete":"Видалити",
       "classes-on":"Пари на",
       "updated-on":"Оновлено",
-      "group":"група"
+      "group":"група",
+      "menu-notification": "Сповіщення"
    }
 }
