--- a/Src/Resources/Localization/ua.json
+++ b/Src/Resources/Localization/ua.json
@@ -9,6 +9,7 @@
       "choose-faculty-message":"Вибери факультет:",
       "no-groups-for-faculty-message":"На жаль, для цього факультету груп не має :(",
       "add-group":"Додати групу",
+      "remove-group":"Видалити групу",
       "monday":"Понеділок",
       "tuesday":"Вівторок",
       "wednesday":"Середа",
