--- a/Src/Resources/Localization/ua.json
+++ b/Src/Resources/Localization/ua.json
@@ -3,21 +3,22 @@
    "language-full-name":"🇺🇦 Українська",
    "values":{
       "choose-group-message":"Обери групу",
-      "choose-action-message":"Вибери дію",
+      "choose-action-message":"Обери дію",
       "schedule-reply-keyboard":"Розклад",
       "menu-reply-keyboard":"Меню",
-      "choose-faculty-message":"Вибери факультет:",
+      "choose-faculty-message":"Обери факультет:",
       "no-groups-for-faculty-message":"На жаль, для цього факультету груп не має :(",
       "add-group":"Додати групу",
       "remove-group":"Видалити групу",
-      "select-group-to-remove":"Вибери групу для видалення:",
+      "select-group-to-remove":"Обери групу для видалення",
+      "select-group-to-show-timetable":"Обери групу для отримання розкладу",
       "monday":"Понеділок",
       "tuesday":"Вівторок",
-      "wednesday":"Середа",
+      "wednesday":"Середу",
       "thursday":"Четвер",
-      "friday":"П'ятниця",
-      "saturday":"Субота",
-      "sunday":"Неділя",
+      "friday":"П'ятницю",
+      "saturday":"Суботу",
+      "sunday":"Неділю",
       "monday-short":"Пн",
       "tuesday-short":"Вт",
       "wednesday-short":"Ср",
