--- a/Src/Resources/Localization/ua.json
+++ b/Src/Resources/Localization/ua.json
@@ -9,6 +9,7 @@
       "choose-faculty-message":"Обери факультет:",
       "no-groups-for-faculty-message":"На жаль, для цього факультету груп не має :(",
       "such-faculty-was-not-found":"Такого факультету не знайдено",
+      "such-faculty-group-was-not-found":"Такої групи не знайдено",
       "add-group":"Додати групу",
       "remove-group":"Видалити групу",
       "select-group-to-remove":"Обери групу для видалення",
